--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,2 +1,28 @@
 // Import all of Bootstrap's CSS
 @use "/node_modules/bootstrap/scss/bootstrap";
+
+
+
+header {
+    background-color: rgba(0, 0, 0, 0.644) !important;
+}
+
+.text_color {
+    color: rgba(142, 242, 242, 0.874);
+}
+
+body {
+    background-color: rgba(0, 0, 0, 0.717);
+    color: rgba(142, 242, 242, 0.874);
+
+    & .card_bg {
+        background-color: rgba(0, 0, 0, 0.644);
+    }
+
+    & .card_hover:hover {
+        background-color: rgba(0, 0, 0, 0.47);
+        color: rgba(150, 255, 255, 0.874);
+        scale: 1.02;
+        padding: .3rem!important;
+    }
+}
